@@ -206,6 +206,7 @@ public final class Skills {
 		SIN_HASTE = 4101004,
 		DRAIN = 4101005,
 
+		ALCHEMIST = 4110000,
 		MESO_UP = 4111001,
 		SHADOW_PARTNER = 4111002,
 		SHADOW_WEB = 4111003,
